Fix layout with librarika searcher on mobile

--- a/css/bhg.css
+++ b/css/bhg.css
@@ -91,6 +91,10 @@ body {
 	text-align: center;
 }
 
+.clear-both {
+	clear: both;
+}
+
 b {
 	font-weight: bold;
 }
